compiler/testData/checkerWithErrorTypes/quick/DefaultValuesTypechecking.jet
val x = ""

fun bar(x : Int = <!TYPE_MISMATCH!>""<!>, y : Int = <!TYPE_MISMATCH!>x<!>, z : String = <!UNRESOLVED_REFERENCE!>y<!>) {

}
